--- a/IconMaker/IconMaker.csproj
+++ b/IconMaker/IconMaker.csproj
@@ -69,11 +69,15 @@
     </ApplicationDefinition>
     <Compile Include="Model\Collection.cs" />
     <Compile Include="Model\CollectionIcon.cs" />
+    <Compile Include="Model\ColorEx.cs" />
     <Compile Include="Model\OverlayPosition.cs" />
     <Compile Include="Model\SaveOptions.cs" />
     <Compile Include="wpf\AspectRatioContentControl.cs" />
     <Compile Include="wpf\BooleanToBrushConverter.cs" />
     <Compile Include="wpf\BooleanToVisibilityConverter.cs" />
+    <Compile Include="wpf\ColorTag.xaml.cs">
+      <DependentUpon>ColorTag.xaml</DependentUpon>
+    </Compile>
     <Compile Include="wpf\LineGrid.cs" />
     <Compile Include="wpf\RelayCommand.cs" />
     <Compile Include="wpf\RoutedCommandBinding.cs" />
@@ -103,6 +107,10 @@
     <Page Include="Themes\Generic.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="wpf\ColorTag.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
