--- a/IconMaker/IconMaker.csproj
+++ b/IconMaker/IconMaker.csproj
@@ -70,7 +70,6 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="IntrusiveDictionary.cs" />
     <Compile Include="Model\Collection.cs" />
     <Compile Include="Model\CollectionIcon.cs" />
     <Compile Include="Model\ColorEx.cs" />
@@ -83,6 +82,10 @@
     <Compile Include="Model\ColorFilters\HSIShift.cs" />
     <Compile Include="Model\ColorFilters\HSLShift.cs" />
     <Compile Include="Model\ColorFilters\HSVShift.cs" />
+    <Compile Include="Model\ColorFilters\HueRingEffect.cs" />
+    <Compile Include="Model\ColorFilters\ModifyColors.xaml.cs">
+      <DependentUpon>ModifyColors.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Model\ColorMap.cs" />
     <Compile Include="Model\ColorMapEntry.cs" />
     <Compile Include="Model\ColorFilters\IColorFilter.cs" />
@@ -127,6 +130,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Model\ColorFilters\ModifyColors.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Themes\Generic.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -155,6 +162,8 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <Resource Include="bin\Debug\Hue.cso" Condition=" '$(Configuration)' == 'Debug' " />
+    <Resource Include="bin\Release\Hue.cso" Condition=" '$(Configuration)' == 'Release' " />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -179,12 +188,24 @@
   <ItemGroup>
     <Resource Include="IconMaker.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <PixelShader Include="Hue.hlsl">
+      <AllResourcesBound>False</AllResourcesBound>
+      <CompileDirect2DCustomEffect>False</CompileDirect2DCustomEffect>
+      <EnableDebuggingInfo>False</EnableDebuggingInfo>
+      <ShaderModel>3_0</ShaderModel>
+      <DisableOptimizations>False</DisableOptimizations>
+      <ObjectFileOutput>Hue.fx</ObjectFileOutput>
+    </PixelShader>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\packages\Fody.3.0.4\build\Fody.targets" Condition="Exists('..\packages\Fody.3.0.4\build\Fody.targets')" />
+  <Import Project="..\packages\Fody.3.1.3\build\Fody.targets" Condition="Exists('..\packages\Fody.3.1.3\build\Fody.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Fody.3.0.4\build\Fody.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Fody.3.0.4\build\Fody.targets'))" />
+    <Error Condition="!Exists('..\packages\Fody.3.1.3\build\Fody.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Fody.3.1.3\build\Fody.targets'))" />
+    <Error Condition="!Exists('..\packages\Microsoft.HLSL.CSharpVB.1.0.1\build\Microsoft.HLSL.CSharpVB.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.HLSL.CSharpVB.1.0.1\build\Microsoft.HLSL.CSharpVB.targets'))" />
   </Target>
+  <Import Project="..\packages\Microsoft.HLSL.CSharpVB.1.0.1\build\Microsoft.HLSL.CSharpVB.targets" Condition="Exists('..\packages\Microsoft.HLSL.CSharpVB.1.0.1\build\Microsoft.HLSL.CSharpVB.targets')" />
 </Project>
