--- a/IconMaker/packages.config
+++ b/IconMaker/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Expression.Blend.Sdk" version="1.0.2" targetFramework="net45" />
-  <package id="Fody" version="3.0.4" targetFramework="net40" developmentDependency="true" />
+  <package id="Fody" version="3.1.3" targetFramework="net45" developmentDependency="true" />
+  <package id="Microsoft.HLSL.CSharpVB" version="1.0.1" targetFramework="net45" />
   <package id="PropertyChanged2.Fody" version="2.5.6" targetFramework="net40" />
 </packages>
