--- a/IconMaker/IconMaker.csproj
+++ b/IconMaker/IconMaker.csproj
@@ -79,7 +79,7 @@
     <Compile Include="Model\ColorFilters\HSIShift.cs" />
     <Compile Include="Model\ColorFilters\HSLShift.cs" />
     <Compile Include="Model\ColorFilters\HSVShift.cs" />
-    <Compile Include="Model\ColorFilters\HueRingEffect.cs" />
+    <Compile Include="wpf\HueRingEffect.cs" />
     <Compile Include="Model\ColorFilters\ModifyColors.xaml.cs">
       <DependentUpon>ModifyColors.xaml</DependentUpon>
     </Compile>
@@ -180,8 +180,8 @@
     <None Include="xsd\IconMaker.xsd">
       <SubType>Designer</SubType>
     </None>
-    <Resource Include="bin\Debug\Hue.cso" Condition=" '$(Configuration)' == 'Debug' " />
-    <Resource Include="bin\Release\Hue.cso" Condition=" '$(Configuration)' == 'Release' " />
+    <Resource Include="..\Shaders\bin\Debug\HueRing.cso" Condition=" '$(Configuration)' == 'Debug' " />
+    <Resource Include="..\Shaders\bin\Release\HueRing.cso" Condition=" '$(Configuration)' == 'Release' " />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -205,16 +205,6 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="IconMaker.ico" />
-  </ItemGroup>
-  <ItemGroup>
-    <PixelShader Include="Hue.hlsl">
-      <AllResourcesBound>False</AllResourcesBound>
-      <CompileDirect2DCustomEffect>False</CompileDirect2DCustomEffect>
-      <EnableDebuggingInfo>False</EnableDebuggingInfo>
-      <ShaderModel>3_0</ShaderModel>
-      <DisableOptimizations>False</DisableOptimizations>
-      <ObjectFileOutput>Hue.fx</ObjectFileOutput>
-    </PixelShader>
   </ItemGroup>
   <ItemGroup>
     <Resource Include="img\database-refresh%4032px.png" />
